@@ -60,6 +60,26 @@ name|java
 operator|.
 name|util
 operator|.
+name|Arrays
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Collection
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
 name|concurrent
 operator|.
 name|Callable
@@ -91,6 +111,34 @@ operator|.
 name|fs
 operator|.
 name|CommonConfigurationKeysPublic
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|fs
+operator|.
+name|FileUtil
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|http
+operator|.
+name|HttpConfig
 import|;
 end_import
 
@@ -196,9 +244,45 @@ name|hadoop
 operator|.
 name|security
 operator|.
+name|ssl
+operator|.
+name|KeyStoreTestUtil
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|security
+operator|.
 name|token
 operator|.
 name|Token
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|yarn
+operator|.
+name|api
+operator|.
+name|records
+operator|.
+name|timeline
+operator|.
+name|TimelineDomain
 import|;
 end_import
 
@@ -364,16 +448,6 @@ name|org
 operator|.
 name|junit
 operator|.
-name|AfterClass
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|junit
-operator|.
 name|Assert
 import|;
 end_import
@@ -394,7 +468,7 @@ name|org
 operator|.
 name|junit
 operator|.
-name|BeforeClass
+name|Test
 import|;
 end_import
 
@@ -404,11 +478,32 @@ name|org
 operator|.
 name|junit
 operator|.
-name|Test
+name|runner
+operator|.
+name|RunWith
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|junit
+operator|.
+name|runners
+operator|.
+name|Parameterized
 import|;
 end_import
 
 begin_class
+annotation|@
+name|RunWith
+argument_list|(
+name|Parameterized
+operator|.
+name|class
+argument_list|)
 DECL|class|TestTimelineAuthenticationFilter
 specifier|public
 class|class
@@ -451,7 +546,14 @@ init|=
 operator|new
 name|File
 argument_list|(
-literal|"target"
+name|System
+operator|.
+name|getProperty
+argument_list|(
+literal|"test.build.dir"
+argument_list|,
+literal|"target/test-dir"
+argument_list|)
 argument_list|,
 name|TestTimelineAuthenticationFilter
 operator|.
@@ -489,31 +591,123 @@ operator|.
 name|getServerPrincipal
 argument_list|()
 decl_stmt|;
-DECL|field|testMiniKDC
+DECL|field|BASEDIR
 specifier|private
 specifier|static
+specifier|final
+name|String
+name|BASEDIR
+init|=
+name|System
+operator|.
+name|getProperty
+argument_list|(
+literal|"test.build.dir"
+argument_list|,
+literal|"target/test-dir"
+argument_list|)
+operator|+
+literal|"/"
+operator|+
+name|TestTimelineAuthenticationFilter
+operator|.
+name|class
+operator|.
+name|getSimpleName
+argument_list|()
+decl_stmt|;
+annotation|@
+name|Parameterized
+operator|.
+name|Parameters
+DECL|method|withSsl ()
+specifier|public
+specifier|static
+name|Collection
+argument_list|<
+name|Object
+index|[]
+argument_list|>
+name|withSsl
+parameter_list|()
+block|{
+return|return
+name|Arrays
+operator|.
+name|asList
+argument_list|(
+operator|new
+name|Object
+index|[]
+index|[]
+block|{
+block|{
+literal|false
+block|}
+block|,
+block|{
+literal|true
+block|}
+block|}
+argument_list|)
+return|;
+block|}
+DECL|field|testMiniKDC
+specifier|private
 name|MiniKdc
 name|testMiniKDC
 decl_stmt|;
+DECL|field|keystoresDir
+specifier|private
+name|String
+name|keystoresDir
+decl_stmt|;
+DECL|field|sslConfDir
+specifier|private
+name|String
+name|sslConfDir
+decl_stmt|;
 DECL|field|testTimelineServer
 specifier|private
-specifier|static
 name|ApplicationHistoryServer
 name|testTimelineServer
 decl_stmt|;
 DECL|field|conf
 specifier|private
-specifier|static
 name|Configuration
 name|conf
 decl_stmt|;
-annotation|@
-name|BeforeClass
-DECL|method|setupClass ()
+DECL|field|client
+specifier|private
+name|TimelineClient
+name|client
+decl_stmt|;
+DECL|field|withSsl
+specifier|private
+name|boolean
+name|withSsl
+decl_stmt|;
+DECL|method|TestTimelineAuthenticationFilter (boolean withSsl)
 specifier|public
-specifier|static
+name|TestTimelineAuthenticationFilter
+parameter_list|(
+name|boolean
+name|withSsl
+parameter_list|)
+block|{
+name|this
+operator|.
+name|withSsl
+operator|=
+name|withSsl
+expr_stmt|;
+block|}
+annotation|@
+name|Before
+DECL|method|setup ()
+specifier|public
 name|void
-name|setupClass
+name|setup
 parameter_list|()
 block|{
 try|try
@@ -573,8 +767,10 @@ expr_stmt|;
 name|conf
 operator|=
 operator|new
-name|YarnConfiguration
-argument_list|()
+name|Configuration
+argument_list|(
+literal|false
+argument_list|)
 expr_stmt|;
 name|conf
 operator|.
@@ -712,6 +908,17 @@ name|conf
 operator|.
 name|set
 argument_list|(
+name|YarnConfiguration
+operator|.
+name|TIMELINE_SERVICE_WEBAPP_HTTPS_ADDRESS
+argument_list|,
+literal|"localhost:8190"
+argument_list|)
+expr_stmt|;
+name|conf
+operator|.
+name|set
+argument_list|(
 literal|"hadoop.proxyuser.HTTP.hosts"
 argument_list|,
 literal|"*"
@@ -726,6 +933,86 @@ argument_list|,
 name|FOO_USER
 argument_list|)
 expr_stmt|;
+if|if
+condition|(
+name|withSsl
+condition|)
+block|{
+name|conf
+operator|.
+name|set
+argument_list|(
+name|YarnConfiguration
+operator|.
+name|YARN_HTTP_POLICY_KEY
+argument_list|,
+name|HttpConfig
+operator|.
+name|Policy
+operator|.
+name|HTTPS_ONLY
+operator|.
+name|name
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|File
+name|base
+init|=
+operator|new
+name|File
+argument_list|(
+name|BASEDIR
+argument_list|)
+decl_stmt|;
+name|FileUtil
+operator|.
+name|fullyDelete
+argument_list|(
+name|base
+argument_list|)
+expr_stmt|;
+name|base
+operator|.
+name|mkdirs
+argument_list|()
+expr_stmt|;
+name|keystoresDir
+operator|=
+operator|new
+name|File
+argument_list|(
+name|BASEDIR
+argument_list|)
+operator|.
+name|getAbsolutePath
+argument_list|()
+expr_stmt|;
+name|sslConfDir
+operator|=
+name|KeyStoreTestUtil
+operator|.
+name|getClasspathDir
+argument_list|(
+name|TestTimelineAuthenticationFilter
+operator|.
+name|class
+argument_list|)
+expr_stmt|;
+name|KeyStoreTestUtil
+operator|.
+name|setupSSLConfig
+argument_list|(
+name|keystoresDir
+argument_list|,
+name|sslConfDir
+argument_list|,
+name|conf
+argument_list|,
+literal|false
+argument_list|)
+expr_stmt|;
+block|}
 name|UserGroupInformation
 operator|.
 name|setConfiguration
@@ -760,58 +1047,6 @@ literal|false
 argument_list|)
 expr_stmt|;
 block|}
-block|}
-annotation|@
-name|AfterClass
-DECL|method|tearDownClass ()
-specifier|public
-specifier|static
-name|void
-name|tearDownClass
-parameter_list|()
-block|{
-if|if
-condition|(
-name|testMiniKDC
-operator|!=
-literal|null
-condition|)
-block|{
-name|testMiniKDC
-operator|.
-name|stop
-argument_list|()
-expr_stmt|;
-block|}
-if|if
-condition|(
-name|testTimelineServer
-operator|!=
-literal|null
-condition|)
-block|{
-name|testTimelineServer
-operator|.
-name|stop
-argument_list|()
-expr_stmt|;
-block|}
-block|}
-DECL|field|client
-specifier|private
-name|TimelineClient
-name|client
-decl_stmt|;
-annotation|@
-name|Before
-DECL|method|setup ()
-specifier|public
-name|void
-name|setup
-parameter_list|()
-throws|throws
-name|Exception
-block|{
 name|client
 operator|=
 name|TimelineClient
@@ -844,6 +1079,32 @@ name|Exception
 block|{
 if|if
 condition|(
+name|testMiniKDC
+operator|!=
+literal|null
+condition|)
+block|{
+name|testMiniKDC
+operator|.
+name|stop
+argument_list|()
+expr_stmt|;
+block|}
+if|if
+condition|(
+name|testTimelineServer
+operator|!=
+literal|null
+condition|)
+block|{
+name|testTimelineServer
+operator|.
+name|stop
+argument_list|()
+expr_stmt|;
+block|}
+if|if
+condition|(
 name|client
 operator|!=
 literal|null
@@ -853,6 +1114,37 @@ name|client
 operator|.
 name|stop
 argument_list|()
+expr_stmt|;
+block|}
+if|if
+condition|(
+name|withSsl
+condition|)
+block|{
+name|KeyStoreTestUtil
+operator|.
+name|cleanupSSLConfig
+argument_list|(
+name|keystoresDir
+argument_list|,
+name|sslConfDir
+argument_list|)
+expr_stmt|;
+name|File
+name|base
+init|=
+operator|new
+name|File
+argument_list|(
+name|BASEDIR
+argument_list|)
+decl_stmt|;
+name|FileUtil
+operator|.
+name|fullyDelete
+argument_list|(
+name|base
+argument_list|)
 expr_stmt|;
 block|}
 block|}
@@ -901,7 +1193,12 @@ name|entityToStore
 operator|.
 name|setEntityType
 argument_list|(
-literal|"TestTimelineAuthenticationFilter"
+name|TestTimelineAuthenticationFilter
+operator|.
+name|class
+operator|.
+name|getName
+argument_list|()
 argument_list|)
 expr_stmt|;
 name|entityToStore
@@ -955,7 +1252,12 @@ name|getEntity
 argument_list|(
 literal|"entity1"
 argument_list|,
-literal|"TestTimelineAuthenticationFilter"
+name|TestTimelineAuthenticationFilter
+operator|.
+name|class
+operator|.
+name|getName
+argument_list|()
 argument_list|,
 literal|null
 argument_list|)
@@ -965,6 +1267,113 @@ operator|.
 name|assertNotNull
 argument_list|(
 name|entityToRead
+argument_list|)
+expr_stmt|;
+return|return
+literal|null
+return|;
+block|}
+block|}
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Test
+DECL|method|testPutDomains ()
+specifier|public
+name|void
+name|testPutDomains
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|KerberosTestUtils
+operator|.
+name|doAs
+argument_list|(
+name|HTTP_USER
+operator|+
+literal|"/localhost"
+argument_list|,
+operator|new
+name|Callable
+argument_list|<
+name|Void
+argument_list|>
+argument_list|()
+block|{
+annotation|@
+name|Override
+specifier|public
+name|Void
+name|call
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|TimelineDomain
+name|domainToStore
+init|=
+operator|new
+name|TimelineDomain
+argument_list|()
+decl_stmt|;
+name|domainToStore
+operator|.
+name|setId
+argument_list|(
+name|TestTimelineAuthenticationFilter
+operator|.
+name|class
+operator|.
+name|getName
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|domainToStore
+operator|.
+name|setReaders
+argument_list|(
+literal|"*"
+argument_list|)
+expr_stmt|;
+name|domainToStore
+operator|.
+name|setWriters
+argument_list|(
+literal|"*"
+argument_list|)
+expr_stmt|;
+name|client
+operator|.
+name|putDomain
+argument_list|(
+name|domainToStore
+argument_list|)
+expr_stmt|;
+name|TimelineDomain
+name|domainToRead
+init|=
+name|testTimelineServer
+operator|.
+name|getTimelineStore
+argument_list|()
+operator|.
+name|getDomain
+argument_list|(
+name|TestTimelineAuthenticationFilter
+operator|.
+name|class
+operator|.
+name|getName
+argument_list|()
+argument_list|)
+decl_stmt|;
+name|Assert
+operator|.
+name|assertNotNull
+argument_list|(
+name|domainToRead
 argument_list|)
 expr_stmt|;
 return|return
